# rclone-mounts

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  TODO.md  kcm_rclone_mounts.desktop  metadata.json
.github/: PKGBUILD.ci
.github/workflows/: ci.yml
cpp/: kcm_rclone_mounts.cpp  kcm_rclone_mounts.h  kcm_rclone_mounts.qrc  main.qml
crates/rclone-mounts-core/: Cargo.toml  build.rs
crates/rclone-mounts-core/src/: backend.rs  backend_features.rs  credentials.rs  error.rs  lib.rs  mount.rs  naming.rs  oauth_credentials.rs  rclone_cli.rs  rclone_config.rs  rclone_config_driver.rs  source.rs  source_schema.rs  unit_writer.rs
crates/rclone-mounts-core/src/control/: mod.rs  proxy.rs  session.rs  system.rs
crates/rclone-mounts-core/src/store/: helper.rs  local.rs  mod.rs
crates/rclone-mounts-helper/: Cargo.toml
crates/rclone-mounts-helper/src/: main.rs
crates/rclone-mounts-kcm/: Cargo.toml  build.rs
crates/rclone-mounts-kcm/qml/: CredentialEditDialog.qml  CredentialsPage.qml  Helpers.qml  Main.qml  MainListPage.qml  MountEditorDialog.qml  MountEditorForm.qml  MountEditorPage.qml  MountListItem.qml  SourceAddWizardDialog.qml  SourceEditorDialog.qml  SourceEditorForm.qml  SourceEditorPage.qml  SourceKindFieldsRepeater.qml  SourceSectionHeader.qml  SourceWizard.qml
crates/rclone-mounts-kcm/src/: backend_controller.rs  lib.rs  mount_model.rs  remote_model.rs
data/: dev.jthoward.RcloneMounts.Helper.conf  dev.jthoward.RcloneMounts.Helper.service  dev.jthoward.RcloneMounts.Helper.service.in  dev.jthoward.rclone-mounts.policy
systemd/: rclone-mounts-helper.service  rclone-mounts-helper.service.in
test/: test-file
