[package]
name = "rclone-mounts-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Backend logic for rclone-mounts: trait abstractions, rclone.conf, unit generation, credentials. No Qt deps."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
zbus.workspace = true
async-trait.workspace = true
futures-util.workspace = true
nom.workspace = true
libsystemd.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
async-io = "2"
